<resources>
    <string name="app_name">Event Management</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="your_code">Your Code</string>
    <string name="back">Back</string>
    <string name="confirm">Cofirm</string>
    <string name="registration">Registration</string>
    <string name="title_events">Event</string>
    <string name="title_users">User</string>
    <string name="title_participant">Participant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">Add</string>
    <string name="time_out_try_again">Time out. try again</string>
    <string name="auth_failed">Auth failed</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="opening_web_page">Opening web page</string>
    <string name="reading_data_failed">Reading data failed!</string>
    <string name="no_participant">No Participant</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="user">User</string>
    <string name="server_problem">Server problem</string>
    <string name="hide">Hide</string>
    <string name="username">Username</string>
    <string name="verification">Verification</string>
    <string name="type_your_code">Type your code</string>
    <string name="confirm_this_code">Confirm this code</string>
    <string name="profile">Profile</string>
    <string name="new_password">New Password</string>
    <string name="latest_events">Latest events</string>
    <string name="latest_activity">Latest Activity</string>
    <string name="activity">Activity</string>
    <string name="member">Member</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="institution">Institution</string>
    <string name="phone">Phone</string>
    <string name="no_data">No Data</string>
    <string name="please_wait">Please wait</string>
    <string name="whatsapp_not_installed">Whatsapp app not installed in your phone</string>
    <string name="press_back_exit">Press BACK again to exit</string>
    <string name="edit">Edit</string>
    <string name="summary_participant_base_on_event">Summary Participant Base On Event</string>
    <string name="data">Data</string>
    <string name="the_5_most_participants">The 5 most participants</string>
    <string name="_5_active_participants">5 active participants</string>
    <string name="_5_latest_event">The 5 latest events</string>
    <string name="recap">Recap</string>
    <string name="loading">Loading...</string>

    <string-array name="yes_no">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="admin_user">
        <item>Admin</item>
        <item>User</item>
    </string-array>
</resources>
