<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/layout_30"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_30"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_login"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/login_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_15"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_15"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/login_bt_login"
                    android:textColor="@color/colorPrimary"
                    android:background="@drawable/orangercorner"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:id="@+id/login_bt_sign_up"
                    android:textColor="@color/grey"
                    android:background="@color/transparent"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ll_veri"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:layout_marginBottom="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:id="@+id/login_et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_15"
                android:hint="@string/your_code" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:id="@+id/login_bt_back"
                    android:textColor="@color/blue"
                    android:background="@color/transparent"
                    android:layout_weight="1"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm"
                    android:textColor="@color/colorAccent"
                    android:background="@color/transparent"
                    android:id="@+id/login_bt_confirm"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pb_login"
            android:visibility="gone"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    </LinearLayout>


</LinearLayout>