<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_30"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/layout_30"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        <EditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_15"
            android:id="@+id/regis_et_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="@dimen/layout_15"
            android:id="@+id/regis_et_password"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_weight="1"
                android:textColor="@color/grey"
                android:background="@color/transparent"
                android:id="@+id/regis_bt_back"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:background="@drawable/orangercorner"
                android:id="@+id/regis_bt_sign_up"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/pb_registration"
            android:visibility="gone"
            android:indeterminate="true"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

    </LinearLayout>

</LinearLayout>