<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/layout_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:textAllCaps="true"
                android:layout_weight="1"
                android:text="@string/home"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_home_refresh"
                android:padding="@dimen/layout_5"
                android:src="@drawable/ic_refresh_grey_24dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/grey"
            android:text="Main data summary"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/layout_15"
            android:paddingRight="@dimen/layout_15"
            android:paddingBottom="80dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:text="@string/recap"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/layout_5"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/layout_5"
                    android:layout_weight="1"
                    android:background="@drawable/blue_round_corner"
                    android:orientation="vertical"
                    android:padding="@dimen/layout_10">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/title_events"
                        android:textColor="@color/white" />

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_30"
                        android:id="@+id/pb_j_event"
                        android:layout_marginTop="@dimen/layout_10"
                        android:layout_marginBottom="@dimen/layout_10"
                        android:visibility="gone"
                        android:indeterminate="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_10"
                        android:gravity="right"
                        android:id="@+id/tv_home_j_event"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="@dimen/layout_5"
                    android:padding="@dimen/layout_10"
                    android:background="@drawable/orange_round_corner">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:gravity="right"
                        android:text="@string/member"/>

                    <ProgressBar
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/layout_30"
                        android:id="@+id/pb_j_member"
                        android:layout_marginTop="@dimen/layout_10"
                        android:layout_marginBottom="@dimen/layout_10"
                        android:visibility="gone"
                        android:indeterminate="true"
                        android:indeterminateTintMode="src_atop"
                        android:indeterminateTint="@color/white"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textColor="@color/white"
                        android:layout_marginTop="@dimen/layout_10"
                        android:textStyle="bold"
                        android:id="@+id/tv_home_j_member"
                        android:textSize="30dp"
                        android:text="0"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/layout_20">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/grey"
                    android:textAllCaps="true"
                    android:text="Activity Chart At"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_20"
                    android:id="@+id/sp_thn"/>

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/layout_30"
                    android:layout_marginTop="@dimen/layout_5"
                    android:layout_marginLeft="-20dp"
                    android:id="@+id/pb_chart"
                    android:visibility="gone"
                    android:indeterminate="true"
                    android:indeterminateTint="@color/grey"/>

            </LinearLayout>

            <com.github.mikephil.charting.charts.BarChart
                android:layout_marginTop="@dimen/layout_20"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/bc_chart"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/layout_20"
                android:textColor="@color/grey"
                android:textAllCaps="true"
                android:text="@string/_5_latest_event"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_30"
                android:id="@+id/pb_lat_event"
                android:layout_marginTop="@dimen/layout_10"
                android:layout_marginBottom="@dimen/layout_10"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/grey"/>

            <TextView
                android:layout_width="match_parent"
                android:padding="@dimen/layout_15"
                android:layout_marginTop="@dimen/layout_5"
                android:layout_marginBottom="@dimen/layout_10"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:id="@+id/tv_home_lat_event"
                android:background="@drawable/greyedittextrcorner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/layout_20"
                android:textColor="@color/grey"
                android:textAllCaps="true"
                android:text="@string/_5_active_participants"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_30"
                android:id="@+id/pb_participant"
                android:layout_marginTop="@dimen/layout_10"
                android:layout_marginBottom="@dimen/layout_10"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/grey"/>

            <TextView
                android:layout_width="match_parent"
                android:padding="@dimen/layout_15"
                android:layout_marginTop="@dimen/layout_5"
                android:layout_marginBottom="@dimen/layout_10"
                android:layout_height="wrap_content"
                android:text="@string/please_wait"
                android:id="@+id/tv_home_participant"
                android:background="@drawable/greyedittextrcorner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/layout_20"
                android:textColor="@color/grey"
                android:textAllCaps="true"
                android:text="@string/the_5_most_participants"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_30"
                android:id="@+id/pb_member"
                android:layout_marginTop="@dimen/layout_10"
                android:layout_marginBottom="@dimen/layout_10"
                android:visibility="gone"
                android:indeterminate="true"
                android:indeterminateTint="@color/grey"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/layout_15"
                android:layout_marginTop="@dimen/layout_5"
                android:background="@drawable/greyedittextrcorner"
                android:id="@+id/tv_home_member"
                android:text="@string/please_wait"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>